@@ -1,14 +1,14 @@
 # Created by Jevoom
 #
 # 15-Aug-2012
-#     Add NoMethodError as a reason why calls tp older servers may fail.
+#     Add a catchall for connecting to older servers
 #     
 
 module Jerbil
-  # version set to 1.0.1
-  Version = '1.0.1'
+  # version set to 1.0.2
+  Version = '1.0.2'
   # date set to 15-Aug-2012
   Version_Date = '15-Aug-2012'
-  #ident string set to: jerbil-1.0.1 15-Aug-2012
-  Ident = 'jerbil-1.0.1 15-Aug-2012'
+  #ident string set to: jerbil-1.0.2 15-Aug-2012
+  Ident = 'jerbil-1.0.2 15-Aug-2012'
 end
